<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.cang.geoquiz.MainActivity"
        tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="0dp">

    <TextView
            android:text="@string/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/questionView"
            app:layout_constraintVertical_bias="0.36"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1"/>
    <Button
            android:text="@string/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_true"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/questionView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_false"
            app:layout_constraintHorizontal_chainStyle="packed"/>
    <Button
            android:text="@string/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_false"
            app:layout_constraintTop_toTopOf="@+id/button_true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/button_true"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="8dp"/>
    <Button
            android:text="@string/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prev_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/next_button"
            android:drawableLeft="@drawable/arrow_left"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next_button"
            app:layout_constraintTop_toTopOf="@+id/prev_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/prev_button"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:drawableRight="@drawable/arrow_right"
            app:layout_constraintHorizontal_bias="0.5"/>
</android.support.constraint.ConstraintLayout>
